/**
 * Інтерфейс для рецензування 3D-моделей
 */
public interface IReviewer {
    /**
     * Метод для рецензування моделі
     */
    void reviewModel();
}