@startuml
title Диаграмма классов (Architecture - Setter Injection)

class User {
    - String id
    - String name
    + User(String id, String name)
    + login()
    + getName(): String
}

interface IReviewer {
    + reviewModel()
}

class Architect {
    - Model currentModel
    + Architect(String id, String name)
    + publishModel()
    + releaseUpdate()
    + setCurrentModel(Model model)
    + login()
}

class BIMCollaboration {
    - ArchitectureService dbService
    + setArchitectureService(ArchitectureService dbService)
    + startDemo()
}

class ArchitectureService {
    - Connection connection
    + saveModelInfo(String description)
    + logAction(String action, String details)
}

class ArchitectureModule {
    + configure()
    + provideConnection(): Connection
}

class Model {
    - String name
    - int version
    + view()
    + toString(): String
}

Architect --|> User
Architect ..|> IReviewer
BIMCollaboration ..> ArchitectureService : uses (via Setter @Inject)
BIMCollaboration ..> Architect
BIMCollaboration ..> Model
ArchitectureModule ..> ArchitectureService
Architect --> Model
@enduml